[tool.poetry]
name = "hockey-game-planner"
version = "0.1.0"
description = "Plan hockey lines"
authors = ["Vytautas Usaitis"]
license = "MIT"
readme = "README.md"
packages = [{include = "hockey_game_planner"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
dash = "^2.8.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
